# prompt-evaluation-with-claude

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  best_dataset.json  evaluation_dataset.json  evaluation_results.json  main.py  pyproject.toml  refined_dataset_1.json  refined_dataset_3.json  refined_dataset_4.json  refined_dataset_5.json  refined_evaluation_results_1.json  refined_evaluation_results_2.json  refined_evaluation_results_3.json  refined_evaluation_results_4.json  refined_evaluation_results_5.json  refined_solutions_1.json  refined_solutions_2.json  refined_solutions_3.json  refined_solutions_4.json  refined_solutions_5.json  run_storage.py  solutions.json
demo_data/: evaluation_dataset.json  evaluation_results.json  refined_dataset_1.json  refined_dataset_2.json  refined_dataset_3.json  refined_dataset_4.json  refined_dataset_5.json  refined_dataset_6.json  refined_dataset_7.json  refined_dataset_8.json  refined_evaluation_results_1.json  refined_evaluation_results_2.json  refined_evaluation_results_3.json  refined_evaluation_results_4.json  refined_evaluation_results_5.json  refined_evaluation_results_6.json  refined_evaluation_results_7.json  refined_evaluation_results_8.json  refined_solutions_1.json  refined_solutions_2.json  refined_solutions_3.json  refined_solutions_4.json  refined_solutions_5.json  refined_solutions_6.json  refined_solutions_7.json  refined_solutions_8.json  solutions.json
scripts/: cleanup_runs.py
tests/: test_cleanup_runs.py  test_langgraph_agent.py  test_run_storage.py
